[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-health-agent"
version = "0.1.0"
description = "Core domain models for a healthcare prior authorization assistant."
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.10,<3.0",
  "pypdf>=5.0,<6.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
